# binkathon

./: README.md  SBI-040426-theory.ipynb  mapmaking-300326-starting.ipynb  pyproject.toml
tests/data/: test_obs.h5
