[project]
name = "binkathon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Binh Nguyen", email = "bnguyen@apc.in2p3.fr"},
]
dependencies = ["furax>=0.10.2", "ipykernel>=7.2.0", "jax>=0.9.2", "cmake>=4.3.1", "toast>=3.0.0a43", "toast-cmb>=2.3.14", "jax-grid-search>=0.2.1", "optax>=0.2.8", "jaxlib>=0.9.2", "apischema>=0.19.0", "pixell>=0.31.8", "sotodlib>=0.6.17"]
requires-python = "<3.13,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]
